Fix for Blast Furnaces
- Now checks for a second ingredient before testing it.
- Now checks for a second result before validating it.

fixes #85